# get-youtube-transcriptions

./: README.md  project_work_hours.csv  pyproject.toml
.github/workflows/: get_transcriptions.yaml
get_youtube_transcriptions/: youtube.py
transcripts/: 202303161415_Q27ihdGV_MI_not_found.txt  202305171320_pOLmD_WVY-E_not_found.txt  202305311119_ycq3CJ3mIfQ_not_found.txt
